fix: resize header for DUNS on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -487,7 +487,7 @@ svg {
     left: calc(50% - 123px);
   }
   .header {
-    height: 170px;
+    height: 190px;
     align-items: center;
     flex-direction: column;
   }
@@ -502,7 +502,7 @@ svg {
   }
 
   #bgAniversario {
-    top: 148px;
+    top: 168px;
   }
   .float_right_tabs {
     display: none;
